--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <meta name="theme-color" content="#240141" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GALILEOchat: Crie salas de chat e converse com seus amigos"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <meta
+      property="og:site_name"
+      content="https://raw.githubusercontent.com/camilaheinzmann/galileo-chat/main/src/assets/img/galileo.png"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/camilaheinzmann/galileo-chat/main/src/assets/img/galileo.png"
+    />
+    <meta
+      property="busca:image"
+      content="https://raw.githubusercontent.com/camilaheinzmann/galileo-chat/main/src/assets/img/galileo.png"
+    />
+    <meta
+      itemprop="image"
+      content="https://raw.githubusercontent.com/camilaheinzmann/galileo-chat/main/src/assets/img/galileo.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
